# calc

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: ast.h  bar.h  parser.h
src/: main.cpp
test/: ast_test.cpp  test.cpp
